<resources>
    <string name="app_name">FIA</string>
    <string name="input_usuario">Usuario</string>
    <string name="input_password">Contraseña</string>
    <string name="btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Evaluaciones</string>
    <string name="menu_gallery">Expediente</string>
    <string name="menu_slideshow">Cerrar Sesión</string>
    <string name="menu_notification">Notificaciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_en_curso">EN CURSO</string>
    <string name="item_pendientes">PENDIENTES</string>
    <string name="item_finalizado">FINALIZADO</string>
    <string name="title_activity_evaluaciones2">Evaluaciones2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="text_fecha_inicio">Fecha Inicio: </string>
    <string name="text_fecha_fin">"Fecha Fin: "</string>
    <string name="action_programar_evaluacion">Programar Evaluación</string>
    <string name="text_asignatura">Asignatura:</string>
    <string name="text_titulo">Título:</string>
    <string name="text_nueva_evaluacion">Nueva Evaluación</string>
    <string name="text_descripcion">Descripción:</string>
    <string name="text_fecha_de_inicio">Fecha y Hora De Inicio:</string>
    <string name="text_fecha_de_fin">Fecha y Hora De Finalización:</string>
    <string name="text_guardar">GUARDAR</string>
    <string name="text_cancelar">CANCELAR</string>
    <string name="text_odenar_por">Ordenar Por</string>
    <string name="text_notificaciones">Notificaciones</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">CANCELAR</string>
    <string name="text_radio_asignatura">Asignatura</string>
    <string name="text_radio_fecha_inicio">Fecha De Inicio</string>
    <string name="text_radio_fecha_fin">Fecha De Finalización</string>
    <string name="text_inicio">Inicio</string>
    <string name="text_fecha">Fecha</string>
    <string name="text_hora">Hora</string>
    <string name="text_descripcion_evaluacion">Descripción Evaluación</string>
    <string name="text_local">Local:</string>
    <string name="text_recursos">Recursos:</string>
    <string name="text_no_recursos">Añadir</string>
    <string name="text_empty">No se han seleccionado recursos</string>
</resources>