<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Evaluaciones">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/design_default_color_background"
            app:tabIndicator="@color/colorAccent"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            app:tabTextColor="@color/design_default_color_on_secondary">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_en_curso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_playlist_play_24"
                android:text="@string/item_en_curso" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_pendientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_view_headline_24"
                android:text="@string/item_pendientes" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_finalizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_playlist_add_check_24"
                android:text="@string/item_finalizado" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>
</FrameLayout>